Cyberduck
https://cyberduck.io/

5.3 [https://trac.cyberduck.io/milestone/5.3]
- [Feature] Choose certificate in bookmark panel for mutual authentication with TLS
- [Feature] Choose SSH private key from list in bookmark panel
- [Bugfix] Repeated prompt for client certificate (WebDAV) (#9746)

5.2.2 [https://trac.cyberduck.io/milestone/5.2.2]
- [Feature] Toggle transfer acceleration for bucket in Info panel (S3)
- [Feature] Support OpenSSH unencrypted private key format for ed25519 keys (SFTP) (#8548)

5.2.1 [https://trac.cyberduck.io/milestone/5.2.1]
- [Feature] All embedded assemblies are cryptographically signed (Windows)
- [Bugfix] Paginate directory listings (Dropbox)
- [Bugfix] Ignore permission failure for reading transfer acceleration configuration (S3) (#9741)

5.2 [https://trac.cyberduck.io/milestone/5.2]
- [Feature] Support connecting to Dropbox (Dropbox) (#6427)
- [Feature] Tabbed windows (macOS 10.12) (#5998)
- [Feature] Support transfer acceleration (S3) (#9570)
- [Feature] Provide URL references to Google Docs documents in browser (Google Drive)
- [Feature] Support for US East (Ohio) region (S3)
- [Feature] Support for Asia Pacific (Seoul) region (S3)
- [Feature] Support for Asia Pacific (Mumbai) region (S3)

5.1.4 [https://trac.cyberduck.io/milestone/5.1.4]
- [Bugfix] Duplicate folders displayed in file browser (Backblaze B2) (#9717)
- [Bugfix] Updates to ACLs not showing up in Info window without refreshing (S3) (#9731)

5.1.3 [https://trac.cyberduck.io/milestone/5.1.3]
- [Bugfix] Normalize (NFC) filenames (SFTP)
- [Bugfix] Overwriting file creates duplicate (Google Drive)

5.1.2 [https://trac.cyberduck.io/milestone/5.1.2]
- [Bugfix] Crash importing bookmarks from ExpanDrive (Windows) (#9672)

5.1.1 [https://trac.cyberduck.io/milestone/5.1.1]
- [Feature] Allow connections with AWS2 signature version using connection profile (S3) (#9667)
- [Bugfix] Cleanup temporary files on application exit