@@ -32,11 +32,15 @@
     <a href="https://trac.cyberduck.io/milestone/5.3"><strong>Version 5.3</strong></a>
 </p>
 <ul>
-    <li>[Feature] Choose certificate in bookmark panel for mutual authentication with TLS</li>
-    <li>[Feature] Choose SSH private key from list in bookmark panel</li>
+    <li>[Feature] Use multiple connections in browser for parallel background task executions</li>
+    <li>[Feature] Choose certificate in bookmark panel for mutual authentication with TLS (WebDAV)</li>
+    <li>[Feature] Choose SSH private key from list in bookmark panel and login prompt (SFTP)</li>
+    <li>[Feature] Use marker and delimiter for listing files (Backblaze B2)</li>
     <li>[Bugfix] Repeated prompt for client certificate (WebDAV) (<a
             href="https://trac.cyberduck.io/ticket/9746">#9746</a>)
     </li>
+    <li>[Bugfix] Modification of distinct metadata for multiple selected files (WebDAV, Azure, S3, OpenStack Swift)</li>
+    <li>[Bugfix] Modification of distinct permissions for multiple selected files (FTP, SFTP)</li>
 </ul>
 
 <p>
