@@ -2,9 +2,13 @@ Cyberduck
 https://cyberduck.io/
 
 5.3 [https://trac.cyberduck.io/milestone/5.3]
-- [Feature] Choose certificate in bookmark panel for mutual authentication with TLS
-- [Feature] Choose SSH private key from list in bookmark panel
+- [Feature] Use multiple connections in browser for parallel background task executions
+- [Feature] Choose certificate in bookmark panel for mutual authentication with TLS (WebDAV)
+- [Feature] Choose SSH private key from list in bookmark panel and login prompt (SFTP)
+- [Feature] Use marker and delimiter for listing files (Backblaze B2)
 - [Bugfix] Repeated prompt for client certificate (WebDAV) (#9746)
+- [Bugfix] Modification of distinct metadata for multiple selected files (WebDAV, Azure, S3, OpenStack Swift)
+- [Bugfix] Modification of distinct permissions for multiple selected files (FTP, SFTP)
 
 5.2.2 [https://trac.cyberduck.io/milestone/5.2.2]
 - [Feature] Toggle transfer acceleration for bucket in Info panel (S3)
